css/style.css
#bootstrapoverrides {
  position: absolute;
  height:100%;
  width: 100%;
  margin:0px;
  padding:0;
  font-family: acumin-pro;
  border-radius: 0px !important;
  /*font-family: 'Lato', sans-serif;*/
  color:#606060;
  background-color:#E8E8E8;
    /*font-family: ""Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif";*/
}
/*Overrides*/
.wow {visibility: hidden;}


#bootstrapoverrides {
    padding: 0px;
}

.text-vertical-center {
    text-align: center;
    vertical-align: middle;
}

.alignright {
    text-align: right;
    vertical-align: middle;
}

#ethos {
    top:0;
    height: 100%;
    position: fixed;
    background-color: white;
    z-index: 5; 
    width: 100%;
    text-align: center;
    padding: 10% 8%;
}

#map {
    position: fixed;
    top:0;
    bottom:0;
    width: 100%; /*width 80% with right:0*/;
    z-index: 0;
}

.draw {
    position:relative;
    z-index:1;
    width:80px;
    height:80px;
    padding:20px;
}

#topRightControls {
    position: fixed;
    width:200px;
    top: 20px;
    right: 20px;
    z-index: 2;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition:all 0.3s;
    align-items: end;
}

.mapboxgl-ctrl-group {
    border: solid 2px #ffc107;
    width: 35px;
}

.mapboxgl-ctrl-group, .mapboxgl-ctrl-geocoder {
    border: solid 2px #ffc107;
    border-radius: 0px;
    background-color: white; /*#c2c2c2;*/
    box-shadow: 0px;
}



#topRightControls > .mapboxgl-ctrl-group {
    float:right;
    margin-bottom: 15px;
}

#topRightControls > .mapboxgl-ctrl-geocoder {
    width:200px;
    margin-bottom: 15px;
}

    #slidenumber {
    text-align: end;
    position: fixed;
    width: 350px;
    bottom: 25px;
    right: 20px;
    z-index: 2;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition:all 0.3s;
}




#toolbarCollapse {
    position: fixed;
    top: 20px;
    left: 150px; 
    z-index: 2;
    width: 40px;
    height: 40px;
}

#toolbarCollapse span {
    width: 80%;
    height: 2px;
    margin: 0 auto;
    display: block;
    background: #555;
    transition: all 0.8s cubic-bezier(0.810, -0.330, 0.345, 1.375);
}

#toolbarCollapse span:first-of-type {
    /* rotate first one */
    transform: rotate(45deg) translate(2px, 2px);
}
#toolbarCollapse span:nth-of-type(2) {
    /* second one is not visible */
    opacity: 0;
}
#toolbarCollapse span:last-of-type {
    /* rotate third one */
    transform: rotate(-45deg) translate(1px, -1px);
}

#toolbarCollapse.active span {
    /* no rotation */
    transform: none;
    /* all bars are visible */
    opacity: 1;
    margin: 5px auto;
}

@media (max-width: 768px) {
    /* Reversing the behavior of the sidebar: 
       it'll be rotated vertically and off canvas by default, 
       collapsing in on toggle button click with removal of 
       the vertical rotation.   */
    #sidebar {
        margin-left: -250px;
        transform: rotateY(100deg);
    }
    #sidebar.active {
        margin-left: 0;
        transform: none;
    }

    /* Reversing the behavior of the bars: 
       Removing the rotation from the first,
       last bars and reappear the second bar on default state, 
       and giving them a vertical margin */
    #toolbarCollapse span:first-of-type,
    #toolbarCollapse span:nth-of-type(2),
    #toolbarCollapse span:last-of-type {
        transform: none;
        opacity: 1;
        margin: 5px auto;
    }

    /* Removing the vertical margin and make the first and last bars rotate again when the sidebar is open, hiding the second bar */
    #toolbarCollapse.active span {
        margin: 0 auto;
    }
    #toolbarCollapse.active span:first-of-type {
        transform: rotate(45deg) translate(2px, 2px);
    }
    #toolbarCollapse.active span:nth-of-type(2) {
        opacity: 0;
    }
    #toolbarCollapse.active span:last-of-type {
        transform: rotate(-45deg) translate(1px, -1px);
    }
}

#presentation {
    width:100%;
    position:relative;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition:all 0.3s;
}

#text {
    text-align: center;
    margin-top:2vw;
    margin-left:2vw;
    position: relative;
    max-width: 60%;
    /*font-family: sans-serif;*/
    /*overflow-y: scroll; Removed because I don't want the scrollbar showing*/
    z-index: 2;
    /*dont know if i need this? -webkit-transition: all 1s;*/
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition:all 0.3s;
}

@media(max-width:768px) {
    #text { 
        min-width:95%;
        }

    }

#presentation {
    padding-bottom: 350px;
}

#accordionExample {
    top: 20px;
    left: 20px;
    position: fixed;
    width: 25%;
    display: block;
    border: solid 3px #A0A0A0;
    border-radius: 5px;
    -webkit-transition: all 0.4s;
    -moz-transition: all 0.4s;
    -o-transition: all 0.4s;
    transition:all 0.4s;
}

#accordionExample > div {
    background-color: rgba(255, 255, 255, .9);
}

@media(max-width:768px) {
    #accordionExample { 
        min-width:40%;
        }

    }


.card > button, .card > button:hover, .card > button:visited, .card > button:focus, .card > button:active {
    white-space: normal;
    padding-top:10px;
    color: rgba(71, 71, 71, 0.87);
    text-transform: uppercase;
    text-decoration: none;/*Looked too much like a boring-old link with the underline, so I removed it*/
}

/*Custom Map Layer Buttons*/
    #toolbar > button {
    border-color: rgba(71, 71, 71, 0.87);
    border-radius:0px;
    border-style: solid;
    border-width:1px;
    background-color: #eaeaea;
    cursor: pointer;
    display: inline-block;
    font-family: acumin-pro;
    font-size: 2.5vmin;
    font-stretch: 100%;
    letter-spacing: 2px;
    line-height: normal;
    margin-bottom: 4px;
    min-width: 100%;
    text-transform: uppercase;
    padding: .375rem;
    }
/* ... */

